Quick  fixes
